Issue #262 - Fix spacing on badges page so that all badges are the same height

--- a/blocks/site/_badges.scss
+++ b/blocks/site/_badges.scss
@@ -29,11 +29,13 @@ ul.badges {
   }
 
   h3 {
-    margin-top: 20px;
+    margin: 10px 0 5px 0;
+    height: 45px;
+    overflow: hidden;
   }
 
   p {
-    height: 5rem;
+    height: 50px;
     overflow: hidden;
   }
 }
